2004-08-10  Not Zed  <NotZed@Ximian.com>

	* providers/groupwise/camel-gw-listener.c
	(get_addressbook_names_from_server): fix for e_passwords api
	change, and handle reprompting as well.

2004-08-06  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-summary.c (untagged_fetch_all): Call
	camel_operation_progress().
	(imap4_summary_fetch_all): Setup info we need for progress
	reporting.
	(imap4_summary_fetch_flags): Same.

2004-08-04  Rodney Dawes  <dobey@novell.com>

	* camel-charset-map.c: #include <gal/util/e-iconv.h>

2004-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* camel-url-scanner.c (camel_url_scanner_scan): In the case of
	start() or end() failing, loop starting with the first character
	immediately following the failed match position. Fixes bug #62136.

2004-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-store.c (imap4_construct): Pass a
	reconnect func.

	* providers/imap4/camel-imap4-engine.c
	(camel_imap4_engine_iterate): Reconnect if needed.
	(camel_imap4_engine_new): Now takes a reconnect func.

2004-07-30  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap4/camel-imap4-engine.c
	(camel_imap4_engine_capability): This needs to prequeue the
	CAPABILITY command rather than queue it normally for the case of
	reconnecting.
	(camel_imap4_engine_namespace): Same.

2004-07-30  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-mime-utils.c (camel_header_encode_string): Similar fix as
	below in a later if-statement. Thanks to Suresh for spotting this
	one.

2004-07-28  Jeffrey Stedfast  <fejj@novell.com>

	* camel-mime-utils.c (camel_header_encode_string): Fixed an ABR
	that may have been responsible for bug #62029.

2004-07-29 Sivaiah Nallagatla <snallagatla@novell.com>

	* proivders/groupwise/camel-groupwise-provider.c: Add an entry to
	specify POA address and a check box to say whehter ssl has to be
	used for SOAP or not
	(groupwise_auto_detect_cb): new function to automatically fill POA